--- a/vlc/Dockerfile
+++ b/vlc/Dockerfile
@@ -1,4 +1,6 @@
-FROM hassioaddons/base:13.1
+ARG BUILD_FROM=hassioaddons/base:13.1.3
+
+FROM $BUILD_FROM AS build-base
 
 ENV LANG C.UTF-8
 ENV HOME=/home/vlc
@@ -6,6 +8,9 @@ ENV HOME=/home/vlc
 RUN apk update
 RUN apk add --no-cache alsa-plugins-pulse
 RUN apk add --no-cache vlc
+
+RUN sed -i 's/geteuid/getppid/' /usr/bin/vlc
+RUN sed -i '197s#.*#    dir = dir == undefined ? "file:///media" : dir;#' /usr/share/vlc/lua/http/js/controllers.js
 
 ENTRYPOINT [ "/init" ]
 CMD []
